student movie linked updated to vlc